force-app/main/default/objects/AccountGoal__c/AccountGoal__c.object-meta.xml
<CustomObject>
    <description>[a0w][AccountGoal__c] Objetos que guardam as metas individuais de cada cliente, para cada período da Campanha de Trade Marketing</description>
    <label>Meta de Campanha</label>
    <nameField>
        <displayFormat>AGO-{YYYY}{00000}</displayFormat>
        <label>Código de Meta da Conta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metas de Campanha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>