force-app/main/default/objects/AccountGoal__c/fields/AreaSalesLkp__c.field-meta.xml
<CustomField>
    <fullName>AreaSalesLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContaOld</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipName>AccountGoals</relationshipName>
    <type>Lookup</type>
</CustomField>