force-app/main/default/objects/AccountGoal__c/fields/BenefitCriteria__c.field-meta.xml
<CustomField>
    <fullName>BenefitCriteria__c</fullName>
    <formula>CampaignMechanicsLkp__r.BenefitCriteriaLkp__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critério do Beneficio</label>
    <type>Text</type>
</CustomField>