force-app/main/default/objects/AccountGoal__c/fields/BenefitPercentage__c.field-meta.xml
<CustomField>
    <fullName>BenefitPercentage__c</fullName>
    <label>Porcentagem do Benefício</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>