force-app/main/default/objects/AccountGoal__c/fields/BenefitRevenueRlp__c.field-meta.xml
<CustomField>
    <fullName>BenefitRevenueRlp__c</fullName>
    <label>Faturamento Benefício</label>
    <summarizedField>MonthlyGoal__c.BenefitRevenueNmb__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>