force-app/main/default/objects/AccountGoal__c/fields/CalculationBasis__c.field-meta.xml
<CustomField>
    <fullName>CalculationBasis__c</fullName>
    <inlineHelpText>Total sumarizado que será utilizado no pagamento do benefício.</inlineHelpText>
    <label>Base de Cálculo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>