force-app/main/default/objects/AccountGoal__c/fields/CalculationBasisRlp__c.field-meta.xml
<CustomField>
    <fullName>CalculationBasisRlp__c</fullName>
    <label>Base de Cálculo</label>
    <summarizedField>MonthlyGoal__c.CalculationBasisFml__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>