force-app/main/default/objects/AccountGoal__c/fields/CampaignCalculationLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignCalculationLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apuração de Campanha</label>
    <referenceTo>CampaignCalculation__c</referenceTo>
    <relationshipName>AccountGoals</relationshipName>
    <type>Lookup</type>
</CustomField>