force-app/main/default/objects/AccountGoal__c/fields/CreatedCreditNote__c.field-meta.xml
<CustomField>
    <fullName>CreatedCreditNote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo onde é indicado se a a meta de conta já gerou uma nota de crédito. Utilizado na recuperação de campanha.</description>
    <label>Gerou Nota de Crédito</label>
    <type>Checkbox</type>
</CustomField>