force-app/main/default/objects/AccountGoal__c/fields/ExternalIdTxt__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdTxt__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>