force-app/main/default/objects/AccountGoal__c/fields/FixedCreditValue__c.field-meta.xml
<CustomField>
    <fullName>FixedCreditValue__c</fullName>
    <description>Valor do crédito a ser gerado quando a mecânica for definida com pagamento fixo</description>
    <label>Valor Crédito Fixo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>