force-app/main/default/objects/AccountGoal__c/fields/FlexValueNmb__c.field-meta.xml
<CustomField>
    <fullName>FlexValueNmb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flexibilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>