force-app/main/default/objects/AccountGoal__c/fields/FlexValueRlp__c.field-meta.xml
<CustomField>
    <fullName>FlexValueRlp__c</fullName>
    <label>Flexibilizado</label>
    <summarizedField>MonthlyGoal__c.FlexValueNmb__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>