force-app/main/default/objects/AccountGoal__c/fields/GoalRlp__c.field-meta.xml
<CustomField>
    <fullName>GoalRlp__c</fullName>
    <label>Meta</label>
    <summarizedField>MonthlyGoal__c.GoalNmb__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>