force-app/main/default/objects/AccountGoal__c/fields/NCDiscountsBenefitRlp__c.field-meta.xml
<CustomField>
    <fullName>NCDiscountsBenefitRlp__c</fullName>
    <label>Descontos NC Benefício</label>
    <summarizedField>MonthlyGoal__c.NCDiscountsBenefitNmb__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>