force-app/main/default/objects/AccountGoal__c/fields/NCDiscountsRlp__c.field-meta.xml
<CustomField>
    <fullName>NCDiscountsRlp__c</fullName>
    <label>Descontos NC</label>
    <summarizedField>MonthlyGoal__c.NCDiscountsNmb__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>