force-app/main/default/objects/AccountGoal__c/fields/Realized__c.field-meta.xml
<CustomField>
    <fullName>Realized__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>