force-app/main/default/objects/AccountGoal__c/fields/RealizedPercentage__c.field-meta.xml
<CustomField>
    <fullName>RealizedPercentage__c</fullName>
    <formula>IF(GoalRlp__c &lt;&gt; 0, RealizedRlp__c / GoalRlp__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentagem Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>