force-app/main/default/objects/AccountGoal__c/fields/RealizedRlp__c.field-meta.xml
<CustomField>
    <fullName>RealizedRlp__c</fullName>
    <label>Realizado</label>
    <summarizedField>MonthlyGoal__c.RealizedFml__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>