force-app/main/default/objects/AccountGoal__c/fields/RevenueRlp__c.field-meta.xml
<CustomField>
    <fullName>RevenueRlp__c</fullName>
    <label>Faturado</label>
    <summarizedField>MonthlyGoal__c.RevenueNmb__c</summarizedField>
    <summaryForeignKey>MonthlyGoal__c.AccountGoalMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>